update package information

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esprima.jsx",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "JSX wrapper for Esprima that is a high performance, standard-compliant ECMAScript parser.",
   "scripts": {
     "build": "grunt build",
@@ -31,11 +31,9 @@
   "devDependencies": {
     "grunt-contrib-watch": "~0.5.3",
     "grunt": "~0.4.1",
-    "grunt-jsx": "~0.0.4"
+    "grunt-jsx": ">=0.1.4",
+    "esprima": "~1.0.4"
   },
   "author": "shibukawa",
-  "license": "BSD-2-Clause",
-  "dependencies": {
-    "esprima": "~1.0.4"
-  }
+  "license": "BSD-2-Clause"
 }
